objects/ssot__Vehicle__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AverageMarketValueAmount__c</fullName>
        <label>Average Market Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ChassisNumber__c</fullName>
        <label>Chassis Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConditionType__c</fullName>
        <label>Condition Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentOwnerId__c</fullName>
        <label>Current Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CylinderCount__c</fullName>
        <label>Cylinder Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngineNumber__c</fullName>
        <label>Engine Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExteriorColorText__c</fullName>
        <label>Exterior Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FrontRimSizeNumber__c</fullName>
        <label>Front Rim Size</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FrontRimSizeUomId__c</fullName>
        <label>Front Rim Size UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FrontTireSizeNumber__c</fullName>
        <label>Front Tire Size</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FrontTireSizeUomId__c</fullName>
        <label>Front Tire Size UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GearBoxTypeText__c</fullName>
        <label>Gear Box Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HeadUnitSecurityCode__c</fullName>
        <label>Head Unit Security Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HighestMarketValueAmount__c</fullName>
        <label>Highest Market Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Vehicle Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IgnitionKeyCode__c</fullName>
        <label>Ignition Key Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InteriorColorText__c</fullName>
        <label>Interior Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InventoryCode__c</fullName>
        <label>Inventory Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsRecallOpen__c</fullName>
        <label>Is Recall Open</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsTelematicsServiceActive__c</fullName>
        <label>Is Telematics Service Active</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastOdometerReadingNumber__c</fullName>
        <label>Last Odometer Reading</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LastServiceDate__c</fullName>
        <label>Last Service Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LatestResidualAmount__c</fullName>
        <label>Latest Residual Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LocationName__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationStateProvinceId__c</fullName>
        <label>Location State Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LowestMarketValueAmount__c</fullName>
        <label>Lowest Market Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ManufacturedDate__c</fullName>
        <label>Manufactured Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ManufacturerWarrantyEndDate__c</fullName>
        <label>Manufacturer Warranty End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ManufacturerWarrantyStartDate__c</fullName>
        <label>Manufacturer Warranty Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ManufacturingBatchNumber__c</fullName>
        <label>Manufacturing Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ManufacturingPlantName__c</fullName>
        <label>Manufacturing Plant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketPriceDate__c</fullName>
        <label>Market Price Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MarketPriceSource__c</fullName>
        <label>Market Price Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketPrice__c</fullName>
        <label>Market Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OdometerReadingDate__c</fullName>
        <label>Odometer Reading Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OdometerReadingUomId__c</fullName>
        <label>Odometer Reading Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OdometerStatus__c</fullName>
        <label>Odometer Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RearRimSizeNumber__c</fullName>
        <label>Rear Rim Size</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RearRimSizeUomId__c</fullName>
        <label>Rear Rim Size UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RearTireSizeNumber__c</fullName>
        <label>Rear Tire Size</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RearTireSizeUomId__c</fullName>
        <label>Rear Tire Size UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegistrationNumber__c</fullName>
        <label>Registration Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegistrationValidityDate__c</fullName>
        <label>Registration Validity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ResidualAmountCalculationDate__c</fullName>
        <label>Residual Amount Calculation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SteeringTypeText__c</fullName>
        <label>Steering Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UpholsteryColorName__c</fullName>
        <label>Upholstery Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UpholsteryTypeName__c</fullName>
        <label>Upholstery Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VehicleDefinitionId__c</fullName>
        <label>Vehicle Definition</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VehicleIdentificationNumber__c</fullName>
        <label>Vehicle Identification Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Vehicle_AssetId_map_Asset_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle_AssetId_map_Asset_Id_N_1</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>Vehicle_AssetId_map_Asset_Id_N_1</relationshipLabel>
        <relationshipName>Vehicle_AssetId_map_Asset_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761234927_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle_CurrentOwnerId_map_Account_I_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Vehicle_CurrentOwnerId_map_Account_I_rel</relationshipLabel>
        <relationshipName>rel_1697761234927_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761234988_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle_FrontRimSizeUomId_map_UnitOf_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>Vehicle_FrontRimSizeUomId_map_UnitOf_rel</relationshipLabel>
        <relationshipName>rel_1697761234988_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761235055_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle_FrontTireSizeUomId_map_UnitO_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>Vehicle_FrontTireSizeUomId_map_UnitO_rel</relationshipLabel>
        <relationshipName>rel_1697761235055_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>